cursive-bootstrap/tests/ui/E-CON/E-CON-0004.cursive
// RUN: compile-fail
// DIAG: E-CON-0004
// SPEC: 8.9
// DESC: Key escapes its defining scope

record Counter {
    value: i32
}

procedure escape_key(c: shared Counter) -> () {
    let k = #c  //~ ERROR E-CON-0004: key escapes scope
    return ()
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
